crates/ohno_macros/src/derive_error/tests/snapshots/ohno_macros__derive_error__tests__tuple__ohno_core_middle_position_tuple.snap
---
source: crates/ohno_macros/src/derive_error/tests/tuple.rs
expression: format_tokens(result)
---
impl MiddlePositionTupleError {
    /// Creates a new error with custom fields and default message.
    pub(crate) fn new(param_0: impl Into<String>, param_2: impl Into<u32>) -> Self {
        Self(param_0.into(), ohno::OhnoCore::default(), param_2.into())
    }
    /// Creates a new error with custom fields and a specified error.
    pub(crate) fn caused_by(
        param_0: impl Into<String>,
        param_2: impl Into<u32>,
        error: impl Into<Box<dyn std::error::Error + Send + Sync>>,
    ) -> Self {
        Self(param_0.into(), ohno::OhnoCore::from(error), param_2.into())
    }
}
impl From<std::convert::Infallible> for MiddlePositionTupleError {
    fn from(_: std::convert::Infallible) -> Self {
        unreachable!("Infallible should never be converted to Error")
    }
}
impl std::fmt::Display for MiddlePositionTupleError {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        self.1.format_error(f, stringify!(MiddlePositionTupleError), None)
    }
}
impl std::error::Error for MiddlePositionTupleError {
    fn source(&self) -> Option<&(dyn std::error::Error + 'static)> {
        self.1.source()
    }
}
impl ohno::Enrichable for MiddlePositionTupleError {
    fn add_enrichment(&mut self, entry: ohno::EnrichmentEntry) {
        self.1.add_enrichment(entry);
    }
}
impl ::core::fmt::Debug for MiddlePositionTupleError {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_tuple(stringify!(MiddlePositionTupleError))
            .field(&self.0)
            .field(&self.1)
            .field(&self.2)
            .finish()
    }
}
impl ohno::ErrorExt for MiddlePositionTupleError {
    fn message(&self) -> String {
        self.1.format_message(stringify!(MiddlePositionTupleError), None)
    }
    fn backtrace(&self) -> &std::backtrace::Backtrace {
        self.1.backtrace()
    }
}
